virdant/examples/errors/multiple_drivers.vir
mod Top {
    wire w : Bit;
    w := false;
    w := true;
}
